updated link for NORT2H

--- a/views/history.hbs
+++ b/views/history.hbs
@@ -70,7 +70,7 @@
                                   in Education</i> series featured an interview about SOLECLE and our growth in the
                               region.
                           </blockquote>
-                          <strong>NORT2H</strong> - <i><a href="http://www.nort2h.org/archived-episodes.html"
+                          <strong>NORT2H</strong> - <i><a href="https://www.youtube.com/watch?v=5iG60rTi79g&index=3&list=PLNaBQwIl4ddQCoKwi8f6nkkLrwyarFzAQ&t=0s"
                                                           target="_blank">Jeff McClellan (4/6/2017) Founding Director of
                           SOLE Cleveland</a></i>
                           </p>
