--- a/views/admin-pending-soles.hbs
+++ b/views/admin-pending-soles.hbs
@@ -29,13 +29,16 @@
                     <tbody>
                     {{#each soles}}
                         <tr>
-                            <td><a href="{{this.pdf}}" target="_blank">{{this.question}} (pdf)</a></td>
+                            <td>{{this.question}}</td>
                             <td>{{this.plannedDate}}</td>
                             <td>{{this.reflectionDate}}</td>
                             <td>{{this.fullName}}</td>
-                            <td><a class="btn-floating btn-small waves-effect waves-light green modal-trigger" href="#approve"><i class="material-icons">thumb_up</i></a> <a
-                                    class="btn-floating btn-small waves-effect waves-light red modal-trigger"
-                                    href="#reject"><i class="material-icons">thumb_down</i></a>
+                            <td>
+                                <a class="btn-small waves-effect waves-light modal-trigger" href="#approve-{{this.id}}">
+                                VIEW
+                                </a>
+
+
                             </td>
                         </tr>
                     {{/each}}
@@ -49,28 +52,98 @@
     </div>
 </div>
 
+{{#each soles}}
 
 <!-- Modal Structure -->
-<div id="approve" class="modal">
+<div id="approve-{{this.id}}" class="modal">
     <div class="modal-content">
-        <h4>What is a sun?</h4>
-        <p>Feedback:
-            <textarea name="" id="" cols="30" rows="10"></textarea></p>
+        <h4>Approve: {{this.question}}</h4>
+        <p><a href="{{this.pdf}}" target="_blank">See the Reflection PDF</a></p>
+        <div class="row">
+            <form class="col s12">
+                <div class="row">
+                    <div class="input-field col s12">
+                        <select id="canned-response-dropdown">
+                            <option><p>I see you have requested help--what can we assist you with?</p></option>
+                            <option><p>Great question! In the future, be sure to expand on your reflection a bit more</p></option>
+                            <option><p>Great question! In the future, be sure to give a more complete answer to the reflection question.</p></option>
+                            <option><p>Great reflection! In the future, be sure to include photographs as further documentation of your SOLE.</p> <p>I see you've requested help--what can we assist you with?</p></option>
+                            <option><p>Great work! If you need resources to help students with research, please let us know</p></option>
+                            <option><p>I noticed you mentioned that students struggled to dig deeper-- if you would like help with ways to counterract this, please let us know!</p></option>
+                            <option><p>I see you have requested help-- what can we assist you with?</p></option>
+                            <option><p>In the future, please include photos in your reflection!</p> <p>I see you requested help-- what can we assist you with?</p></option>
+                            <option>Is there any support we can offer you to help improve the use of Technology during your SOLE session?</option>
+                            <option>It looks like the facilitation duration of this session was too short to be approved.  According to your iOS data your facilitation only lasted 3 minutes, and SOLE sessions should be at least 30 minutes to be effective.</option>
+                            <option><p>Looks like students did a great job using technology during this SOLE.  If you need help improving communication skills in your classroom during SOLE, check our resoures page for some materials produced by other teachers designed to help:</p> <p><a href="https://app.startsole.org/#!/resources">https://app.startsole.org/#!/resources</a></p></option>
+                            <option><p>Looks like students were very engaged in this SOLE.  If you need help improving communication skills in your classroom during SOLE, check our resoures page for some materials produced by other teachers designed to help:</p> <p><a href="https://app.startsole.org/#!/resources">https://app.startsole.org/#!/resources</a></p></option>
+                            <option>Thank you for submitting.  In order to approve this SOLE we will need to see one of two things: a more descriptive reflection or photos that provide more convincing evidence of your use of the SOLE process.</option>
+                            <option><p>Thank you for submitting.  In order to approve this SOLE we will need to see one of two things: a more descriptive reflection or photos that provide more convincing evidence of your use of the SOLE process.</p> <p>We're also happy to talk with you more in person about engagement strategies.  Please give us a time that works for you and we will be happy to follow up.</p></option>
+                            <option><p>Thanks for submitting.  Unfortunately, the picture provided is not a clear example of the complete SOLE process.</p> <p>Please feel free to contact us if you'd like support structuring your classrom to support the SOLE process.</p></option>
+                            <option><p>Thanks for submitting.  Unfortunately, the user reflection, notes, and pictures provided are not a clear example of the complete SOLE process.</p> <p>Please feel free to contact us if you'd like support structuring your classrom to support the SOLE process.</p></option>
+                            <option><p>The student work produced during this SOLE looks great, glad to see that student use of technology is increasing over time!  You noted that collaboration was low even though the students were allowed to move around the room during this SOLE.  We have some resources shared on our site which might be helpful supporting collaboration in your room, if these are not useful please let us know and we can try to offer further support:</p> <p><a href="https://app.startsole.org/#!/resources">https://app.startsole.org/#!/resources</a></p></option>
+                            <option><p>This appears to be a duplicate of the an approved SOLE-- perhaps there was an error submitting it and you redid it?</p></option>
+                            <option><p>This looks like a great SOLE!  If you need more help with communication, check out our resources section using the link below or feel free to reply to this email for personal assistance.</p> <p><a href="https://app.startsole.org/#!/resources">https://app.startsole.org/#!/resources</a></p></option>
+                            <option><p>This looks like a great SOLE!  Is there more help we could provide you with in order to better support collaboration and communication during the process?  If you have ideas for ways we could support you and your class doing SOLE, we'd love to hear about it.  Please feel free to write back and give us your thoughts, and keep up the good work!</p></option>
+                            <option><p>This looks like a great start to SOLE!  Glad to see you were using the organizers from our site during the process, is there more help we could provide you with in order to better support communication and building student independence?  If you have ideas for ways we could support you and your class doing SOLE or feedback about our app, we'd love to hear about it.  Please feel free to write back and give us your thoughts, and keep up the good work!</p></option>
+                            <option><p>This SOLE looks great!</p> <p>I see that you noted there was some difficulty with the presentations. We have many resources around that on the STARTSOLE website! In addition, if you need more help, please let us know.</p></option>
+                            <option><p>This SOLE looks great! I see you noted that you had difficulty keeping all students engaged-- would you like us to send you resources related to that?</p></option>
+                            <option><p>This SOLE looks great! In the future, be sure to go more in depth on your reflection.</p></option>
+                            <option><p>This SOLE looks great! What can we help you with?</p></option>
+                            <option><p>We are unable to approve this SOLE because this question does not seem appropriate for the SOLE process.  Please feel free to contact us if you'd like support creating SOLE questions for your classroom.</p></option>
+                            <option><p>We are unable to approve this SOLE due to missing photographic documentation and limited feedback on reflection</p></option>
+                            <option><p>We are unable to approve this SOLE due to missing photographic documentation and limited feedback on reflection</p> <p>I see you noted that you don’t believe you met your objective for this SOLE - based on what you've learned, what would you do differently in your next SOLE?</p></option>
+                            <option><p>We are unable to approve this SOLE due to missing photographic documentation and limited feedback on reflection</p> <p>If you are just testing out the program, is there anything we can help you with?</p></option>
+                            <option><p>We are unable to approve this SOLE due to missing photographic documentation and limited feedback on reflection</p> <p>I see you have requested help-- what can we assist you with?</p></option>
+                            <option><p>We are unable to approve this SOLE due to missing photographic documentation and limited feedback on reflection</p> <p>If you are just testing out the program, is there anything we can help you with?</p></option>
+                            <option><p>We are unable to approve this SOLE due to the lack of photographic documentation and reflection.  The photos provided seemed to be a duplicate of another SOLE.  If you are having technical difficutlies with our site, please let us know.</p></option>
+                            <option><p>We are unable to approve this SOLE due to the lack of photographic documentation.  The photos provided seemed to be a duplicate of another SOLE.  If you are having technical difficutlies with our site, please let us know.</p></option>
+                            <option><p>You indiciated that creativity suffered in this SOLE-- if you need resources to help increase creativity, please let us know!</p></option>
+                            <option><p>Your SOLE has been approved--however, in the future, be sure to expand on your reflection a bit more!</p></option>
+                            <option><p>Your SOLE reflection is great, keep up the good work!</p></option>
+                            <option><p>I see students struggled a bit with this SOLE-- we recommend checking out the resources at the STARTSOLE website</p> <p><a href="https://app.startsole.org/#!/resources">https://app.startsole.org/#!/resources</a></p> <p>If you need further help, please feel free to respond to this email.</p></option>
+                            <option><p>This looks like a great SOLE!  Glad to see that communication skills seem to be improving.</p></option>
+                            <option><p>Nice work! It's not uncommon to provide students with some resources to help them get started with the research phase, and if you'd like to see some materials compiled by other teachers, check out what's available at <a href="https://app.startsole.org/#!/resources">https://app.startsole.org/#!/resources</a>.  We also just added a new Sample Presentation Rubric to help with student presentations.  It's aligned to Common Core standards and might be of interest to you in future SOLEs.</p></option>
+                            <option><p>Glad to hear students were able to discover the meaning of hierarchy on their own.  If you'd like support with student communication during the presentation phase, we just added a new Sample Presentation Rubric to help with student presentations.  It's aligned to Common Core standards and might be of interest to you in future SOLEs; you can find it at <a href="https://app.startsole.org/#!/resources">https://app.startsole.org/#!/resources</a></p></option>
+                            <option><p>This looks like a good SOLE, and your observations show deep reflection on the process.  Our resources section has a student organizer called 'Research Notes' submitted by another teacher which is designed to help students get better at paraphrasing.  Feel free to check it out by visiting <a href="https://app.startsole.org/#!/resources">https://app.startsole.org/#!/resources</a> and searching for 'Research Notes'.</p> <p>I also noticed that you were displaying a timer on your projector during the student presentations.  The new StartSOLE app allows you to wirelessly connect to your projector and display class timers, your big question, rubrics, and ground rules for students.  If you'd like to try it out, visit <a href="http://www.startsole.org/app-home.html">http://www.startsole.org/app-home.html</a> to get started.</p> <p>Keep up the great work!</p></option>
+                            <option><p>great work!</p></option>
+                            <option><p>In the future, please include photos in your reflection... this is a great question and we'd love to see the work your students produced!</p></option>
+                            <option><p>Nice work!</p></option>
+                            <option><p>This also looks like a great SOLE session!  Could you tell me a little more about how you used modeling boards for this SOLE?  This may be a technique that we'd like to share with other teachers if it worked well for your class.</p></option>
+                            <option><p>"This looks like a great SOLE!  If you need more help with communication, check out our resources section using the link below or feel free to reply to this email for personal assistance.</p> <p><a href="https://app.startsole.org/#!/resources">https://app.startsole.org/#!/resources</a></p></option>
+                            <option><p>This looks like a successful SOLE, and your idea to require groups to cite 3 sources is a good support for encouraging better research practice.  Keep up the good work!</p></option>
+                            <option><p>This looks like a test of our tools.  If you need help with SOLE in the future feel free to email us here we're always eager to assist.</p></option>
+                            <option><p>We are unable to approve this SOLE due to missing photographic documentation and limited feedback on reflection  If you are just testing out the program is there anything we can help you with?</p></option>
+                            <option><p>Don't give up!  It's not unusual that the first SOLE experience is challenging, our research has shown that it takes about 3 SOLE sessions for deeper transformation to take root.  If there are particular ideas that came out of your discussion about what you'd try differently next time we'd love to hear them... we're always trying to spread best practices through the SOLE community.</p></option>
+                            <option><p>Great question!  If there is any support we can offer for in service teacher training please let us know.</p></option>
+                            <option><p>In the future, please include photos in your reflection... this is a great question and we'd love to see the work your students produced!</p></option>
+                            <option><p>Nice work!  This looks like a great SOLE session</p></option>
+                            <option><p>This looks like a test of our tools.  If you need help with SOLE in the future feel free to email us here we're always eager to assist.</p></option>
+                            <option><p>Your photos show clear evidence of student collaboration - keep up the great work!</p></option>
+                        </select>
+                        <label>Pre-fill with canned response (optional)</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <textarea id="feedback" class="materialize-textarea"></textarea>
+                        <label for="feedback">Feedback</label>
+                    </div>
+                </div>
+
+            </form>
+        </div>
+
 
     </div>
     <div class="modal-footer">
-        <a href="#!" class="btn modal-close waves-effect waves-green  btn-flat">Approve & email the user</a>
+        <a class="btn-small waves-effect waves-light green modal-trigger" href="#approve-{{this.id}}">
+            <i class="material-icons left">thumb_up</i> APPROVE
+        </a>
+        <a class="btn-small waves-effect waves-light red modal-trigger"
+           href="#reject-{{this.id}}">
+            <i class="material-icons left">thumb_down</i> REJECT
+        </a>
     </div>
 </div>
 
-<!-- Modal Structure -->
-<div id="reject" class="modal">
-    <div class="modal-content">
-        <h4>Reject Modal Header</h4>
-        <p>Feedback:
-            <textarea name="" id="" cols="30" rows="10"></textarea></p>
-    </div>
-    <div class="modal-footer">
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
-    </div>
-</div>
+{{/each}}
