--- a/views/admin-pending-soles.hbs
+++ b/views/admin-pending-soles.hbs
@@ -60,7 +60,7 @@
         <h4>Approve: {{this.question}}</h4>
         <p><a href="{{this.pdf}}" target="_blank">See the Reflection PDF</a></p>
         <div class="row">
-            <form class="col s12">
+            <form class="col s12" action="/pending-soles?sesh={{sesh}}">
                 <div class="row">
                     <div class="input-field col s12">
                         <select id="canned-response-dropdown">
@@ -125,7 +125,9 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <textarea id="feedback" class="materialize-textarea"></textarea>
+                        <textarea id="feedback" name="feedback" class="materialize-textarea"></textarea>
+                        <input type="hidden" name="sesh" id="sesh" value="{{sesh}}">
+                        <input type="hidden" name="soleId" id="soleId" value="{{soleId}}">
                         <label for="feedback">Feedback</label>
                     </div>
                 </div>
@@ -136,14 +138,29 @@
 
     </div>
     <div class="modal-footer">
-        <a class="btn-small waves-effect waves-light green modal-trigger" href="#approve-{{this.id}}">
+
+        <a type="submit" class="btn-small waves-effect waves-light green modal-trigger"
+           href="#" id="approve-btn-{{this.id}}">
             <i class="material-icons left">thumb_up</i> APPROVE
         </a>
         <a class="btn-small waves-effect waves-light red modal-trigger"
-           href="#reject-{{this.id}}">
+           href="#" id="approve-btn-{{this.id}}">
             <i class="material-icons left">thumb_down</i> REJECT
         </a>
     </div>
 </div>
 
 {{/each}}
+
+
+<script>
+    $(document).ready(function () {
+
+        $('#canned-response-dropdown').on('change', function () {
+            var myText = $("#canned-response-dropdown :selected").text();
+
+            $("#feedback").val(myText);
+        });
+
+    });
+</script>
