Refactoring of role data (uses 'Admin' role instead of 'sole_team' now) Added link to pending SOLEs page on the admin page close #168

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -52,6 +52,7 @@
                 </div>
                 <div class="card-action">
                     <a href="/admin/browse-soles?sesh={{sesh}}">Browse All SOLEs</a>
+                    <a href="/pending-soles?sesh={{sesh}}">Pending SOLEs</a>
                 </div>
             </div>
         </div>
