Make question a link. Wrapped it so we didn't have to truncate. Closes #176

--- a/views/admin-pending-soles.hbs
+++ b/views/admin-pending-soles.hbs
@@ -29,7 +29,7 @@
                     <tbody>
                     {{#each soles}}
                         <tr>
-                            <td><a href="{{this.documents.summary.file}}">{{this.question.text}}</a></td>
+                            <td><a href="{{this.documents.summary.file}}" target="_blank">{{this.question.text}}</a></td>
                             <td>{{this.plannedDate}}</td>
                             <td>{{this.reflectionDate}}</td>
                             <td>{{this.createdBy.userName}}</td>
