rejcet approve soles admin

--- a/views/admin-pending-soles.hbs
+++ b/views/admin-pending-soles.hbs
@@ -16,8 +16,7 @@
             <div class="card-content">
                 <span class="card-title">Approve/Reject SOLEs</span>
                 <p>There are {{totalSoles}} SOLEs in the queue. </p>
-                <input type="text" id="autocomplete-input-666" class="autocomplete">
-                <label for="autocomplete-input-666">Autocomplete</label>
+
 
                 <table class="highlight">
                     <thead>
@@ -39,8 +38,8 @@
                             <td><a href="mailto:{{this.createdBy.email}}">{{this.createdBy.userName}}</a></td>
                             <td><i class="material-icons">live_help</i></td>
                             <td>
-
-
+                                <input type="text" id="autocomplete-input-666" class="autocomplete">
+                                <label for="autocomplete-input-666">Autocomplete</label>
                             </td>
                             <td>
 
@@ -180,3 +179,5 @@
 
 
 </script>
+
+<script src="s"></script>
