--- a/views/admin-pending-soles.hbs
+++ b/views/admin-pending-soles.hbs
@@ -150,24 +150,15 @@
 
     $(document).ready(function () {
 
-
-        $('input.autocomplete').autocomplete({
-            data: {
-                "Apple": null,
-                "Microsoft": null,
-                "Google": 'https://placehold.it/250x250'
-            },
-        });
-
-            // $('input.autocomplete').autocomplete({
-            //     data: cannedResponses
-            //     // ,
-            //     // limit: 20, // The max amount of results that can be shown at once. Default: Infinity.
-            //     // onAutocomplete: function(val) {
-            //     //     // Callback function when value is autcompleted.
-            //     // },
-            //     // minLength: 1, // The minimum length of the input for the autocomplete to start. Default: 1.
-            // });
+            $('input.autocomplete').autocomplete({
+                data: cannedResponses
+                // ,
+                // limit: 20, // The max amount of results that can be shown at once. Default: Infinity.
+                // onAutocomplete: function(val) {
+                //     // Callback function when value is autcompleted.
+                // },
+                // minLength: 1, // The minimum length of the input for the autocomplete to start. Default: 1.
+            });
 
         $('.form-approve').on('submit', function () {
             $(this).hide();
