added in graph for admin view showing status towards 300% growth for the year, added in refer a friend link for trainers, fixed missing semi colon in config

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -31,6 +31,12 @@
                             </div>
                         </li>
                         <li>
+                            <div class="collapsible-header"><i class="material-icons">accessibility_new</i>Percentage Growth</div>
+                            <div class="collapsible-body center-align">
+                                <iframe width="610" height="381" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTAud3Byx20AU8cV90dYh4BkGILQJC9GjkJZwsTdgJa6fVRIURiCiVCUOxiBrfCEw3fB0YfpAilj8w_/pubchart?oid=2112691518&amp;format=interactive"></iframe>
+                            </div>
+                        </li>
+                        <li>
                             <div class="collapsible-header"><i class="material-icons">assignment</i>New SOLEs</div>
                             <div class="collapsible-body center-align">
                                 <iframe width="610" height="381" frameborder="0" src="https://docs.google.com/a/startsole.org/spreadsheets/d/e/2PACX-1vTAud3Byx20AU8cV90dYh4BkGILQJC9GjkJZwsTdgJa6fVRIURiCiVCUOxiBrfCEw3fB0YfpAilj8w_/pubchart?oid=1173715217&amp;format=interactive"></iframe>
