updates to autocomplete for pending SOLEs review screen (also includes frontend code for social media permission check, not currently used yet).

--- a/views/admin-pending-soles.hbs
+++ b/views/admin-pending-soles.hbs
@@ -110,10 +110,11 @@
 <script>
 
     var cannedResponses = {
-        "<p>I see you have requested help--what can we assist you with?</p>": null,
-        "<p>Great question! In the future, be sure to expand on your reflection a bit more</p>": null,
-        "<p>Great question! In the future, be sure to give a more complete answer to the reflection question.</p>": null,
-        "<p>Great reflection! In the future, be sure to include photographs as further documentation of your SOLE.</p> <p>I see you've requested help--what can we assist you with?</p>": null,
+        "<p>I see you have requested help - could you please tell us a little bit more about what was challenging so we can better assist you?</p>": null,
+        "<p>Nice work!  This looks like an effective SOLE session</p>": null,
+        "<p>Great question! In the future, be sure to give a more complete answer to the reflection questions.</p>": null,
+        "<p>Great reflection! In the future, be sure to include photographs as further documentation of your SOLE.</p>": null,
+        "<p>Good job!  Nice to see students working well together in groups - keep it up!</p>": null,
         "<p>Great work! If you need resources to help students with research, please let us know</p>": null,
         "<p>I noticed you mentioned that students struggled to dig deeper-- if you would like help with ways to counterract this, please let us know!</p>": null,
         "<p>I see you have requested help-- what can we assist you with?</p>": null,
