in progress update with autocomplete feedback for SOLEs review

--- a/views/admin-pending-soles.hbs
+++ b/views/admin-pending-soles.hbs
@@ -115,6 +115,9 @@
         "<p>Great question! In the future, be sure to give a more complete answer to the reflection questions.</p>": null,
         "<p>Great reflection! In the future, be sure to include photographs as further documentation of your SOLE.</p>": null,
         "<p>Good job!  Nice to see students working well together in groups - keep it up!</p>": null,
+        "<p>Your photos show clear evidence of student collaboration - keep up the great work!</p>": null,
+        "<p>Great question!  In order to get the most benefit out of the SOLE process, students should work in groups with less than one device per student.  This helps foster collaboration during the research phase.  It looks like some of the groups in this SOLE were using one device per student; please try reduicing the number of devices per group, we will be looking for this in your next SOLE session.</p>": null,
+        //below this line still under review
         "<p>Great work! If you need resources to help students with research, please let us know</p>": null,
         "<p>I noticed you mentioned that students struggled to dig deeper-- if you would like help with ways to counterract this, please let us know!</p>": null,
         "<p>I see you have requested help-- what can we assist you with?</p>": null,
@@ -160,8 +163,7 @@
         "<p>We are unable to approve this SOLE due to missing photographic documentation and limited feedback on reflection  If you are just testing out the program is there anything we can help you with?</p>": null,
         "<p>Don't give up!  It's not unusual that the first SOLE experience is challenging, our research has shown that it takes about 3 SOLE sessions for deeper transformation to take root.  If there are particular ideas that came out of your discussion about what you'd try differently next time we'd love to hear them... we're always trying to spread best practices through the SOLE community.</p>": null,
         "<p>Great question!  If there is any support we can offer for in service teacher training please let us know.</p>": null,
-        "<p>Nice work!  This looks like a great SOLE session</p>": null,
-        "<p>Your photos show clear evidence of student collaboration - keep up the great work!</p>": null
+        "<p>Nice work!  This looks like a great SOLE session</p>": null
     };
 
     $(document).ready(function () {
