in progress autocomplete update

--- a/views/admin-pending-soles.hbs
+++ b/views/admin-pending-soles.hbs
@@ -116,6 +116,7 @@
         "<p>Great reflection! In the future, be sure to include photographs as further documentation of your SOLE.</p>": null,
         "<p>Good job!  Nice to see students working well together in groups - keep it up!</p>": null,
         "<p>Your photos show clear evidence of student collaboration - keep up the great work!</p>": null,
+        "<p>The posters produced during this SOLE look great!</p>": null,
         "<p>Great question!  In order to get the most benefit out of the SOLE process, students should work in groups with less than one device per student.  This helps foster collaboration during the research phase.  It looks like some of the groups in this SOLE were using one device per student; please try reduicing the number of devices per group, we will be looking for this in your next SOLE session.</p>": null,
         //below this line still under review
         "<p>Great work! If you need resources to help students with research, please let us know</p>": null,
